Animations for cards working. Some small bugs, but mostly stable. Why did I not know about backface-visibility? That may have made things easier.

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -25,6 +25,7 @@
 
 #discard-pile-img {
   z-index: -10;
+    transition: transform 0.2s ease-in-out;
 }
 
 #draw-pile-img-backer {
@@ -42,6 +43,7 @@
   height: 80%;
   /* top: 0; */
   z-index: -999;
+
 }
 
 /* #card-container-0 {
